[workspace]
resolver = "2"
members = [
    "crates/bdk",
    "crates/chain",
    "crates/file_store",
    "crates/electrum",
    "crates/esplora",
    "crates/bitcoind_rpc",
    "crates/hwi",
    "example-crates/example_cli",
    "example-crates/example_electrum",
    "example-crates/example_esplora",
    "example-crates/example_bitcoind_rpc_polling",
    "example-crates/wallet_electrum",
    "example-crates/wallet_esplora_blocking",
    "example-crates/wallet_esplora_async",
    "example-crates/wallet_rpc",
    "nursery/tmp_plan",
    "nursery/coin_select"
]

[workspace.package]
authors = ["Bitcoin Dev Kit Developers"]

# Remove this once 0.1.0-beta.2 is out.
[patch.crates-io.psbt-v2]
path = "../../rust-psbt/master"

# Remove this once 0.1.0-beta.2 is out.
[patch.crates-io.hwi]
path = "../../rust-hwi/dev-test-psbt-v2-beta-release"
